Update index.html to have the same background color.

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Organization Name</title>
+    <title>Mola Intelligence</title>
     <style>
         /* This ensures the page takes up the full screen height and removes default margins */
         body, html {
             height: 100%;
             margin: 0;
-            background-color: #ffffff; /* Change this hex code for a different background color */
+            background-color: #F7F7F4; 
         }
 
         /* CSS Grid makes centering the content a one-liner */
